[gd_scene load_steps=11 format=3 uid="uid://cqqtva0vog2li"]

[ext_resource type="Texture2D" uid="uid://c7darw1kulagu" path="res://refs/enemy2/fazendeiro.png" id="1_iw3q2"]
[ext_resource type="Script" path="res://scripts/fazendeiro.gd" id="1_lixtv"]
[ext_resource type="PackedScene" uid="uid://b1mrdudghsob5" path="res://scenes/sensor_component.tscn" id="2_bskn1"]
[ext_resource type="PackedScene" uid="uid://bqmladf3yforg" path="res://scenes/eye_sight_component.tscn" id="3_sigfw"]
[ext_resource type="PackedScene" uid="uid://bsh6qv8danuxn" path="res://scenes/f_movement_validation.tscn" id="4_qnqsw"]
[ext_resource type="PackedScene" uid="uid://bqtygme3qvsse" path="res://scenes/f_movement_tween.tscn" id="5_2pl12"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw54g"]
size = Vector2(46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_yubnp"]
atlas = ExtResource("1_iw3q2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b28gt"]
atlas = ExtResource("1_iw3q2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_joaho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yubnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b28gt")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="Fazendeiro" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_lixtv")

[node name="SensorComponent" parent="." instance=ExtResource("2_bskn1")]

[node name="EyeSightComponent" parent="." instance=ExtResource("3_sigfw")]

[node name="FMovementValidation" parent="." instance=ExtResource("4_qnqsw")]

[node name="FMovementTween" parent="." instance=ExtResource("5_2pl12")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lw54g")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_joaho")
autoplay = "default"
